remove unnecessary jvm args